--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -41,9 +41,26 @@
 }
 
 .pickers .picker {
-	padding: 5px 10px;
+	padding: 15px 5px;
+	border-bottom: 1px solid #bbe1ff;
+}
+
+.pickers .picker:last-child {
+	border-bottom: 0px;
 }
 
 .pickers .picker label.picker-label {
-    font-size: 12px;
+    font-size: 14px;
+    display: block;
+    margin-bottom: 10px;
+}
+
+.pickers .picker a.picker-value {
+	font-size: 12px;
+	padding: 5px 10px;
+}
+
+
+.disabled {
+	background-color: #eaeaea;
 }
